create html, css, and javascript for component

--- a/index.html
+++ b/index.html
@@ -16,8 +16,31 @@
     <div id="accordion">
       <div class="inner-wrap">
         <div class="accordion-item">
-          <div class="accordion-header">Accordion Header</div>
-          <div class="accordion-body">Accordion Body</div>
+          <div id="accordion-item-header">
+            <h2 class="accordion-item-heading">Cheese</h2>
+            <span
+              ><object
+                data="icons/plus-solid.svg"
+                id="accordion-item-toggle"
+              ></object
+            ></span>
+          </div>
+          <div id="accordion-item-body" class="accordion-item-body">
+            <div class="content">
+              <div class="img"><img src="" alt="" /></div>
+              <div class="description">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                  Phasellus luctus, lacus in mollis faucibus, dui turpis euismod
+                  quam, vel ornare augue justo sit amet lacus. Cras pretium nisl
+                  et consequat aliquam. Pellentesque auctor, eros nec volutpat
+                  fermentum, orci urna varius neque, id viverra tellus sapien
+                  sit amet diam.
+                </p>
+                .
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
