--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       <div class="accordion">
         <div class="accordion-header">
           <h2 class="accordion-heading">Item</h2>
-          <span><img src="icons/plus-solid.svg" alt="">
+          <span><img class="accordion-icon" src="icons/plus-solid.svg" alt="">
         </span>
         </div>
         <div class="accordion-body">
             <div class="img">
-             
+              <img src="https://picsum.photos/200" alt="" />
             </div>
             <div class="description">
               <p>
@@ -33,7 +33,6 @@
                 fermentum, orci urna varius neque, id viverra tellus sapien sit
                 amet diam.
               </p>
-              .
             </div>
       
         </div>
@@ -41,13 +40,11 @@
       <div class="accordion">
         <div class="accordion-header">
           <h2 class="accordion-heading">Item</h2>
-          <span
-            ><object data="icons/plus-solid.svg" class="accordion-toggle"></object
-          ></span>
+          <span><span><img class="accordion-icon" src="icons/plus-solid.svg" alt=""></span>
         </div>
         <div class="accordion-body">
             <div class="img">
-              <img src="https://picsum.photos/200" alt="" />
+              <img class="accordion-img" src="https://picsum.photos/200" alt="" />
             </div>
             <div class="description">
               <p>
@@ -66,13 +63,11 @@
       <div class="accordion">
         <div class="accordion-header">
           <h2 class="accordion-heading">Item</h2>
-          <span
-            ><object data="icons/plus-solid.svg" class="accordion-toggle""></object
-          ></span>
+          <span><img class="accordion-icon" src="icons/plus-solid.svg" alt=""></span>
         </div>
         <div class="accordion-body">
             <div class="img">
-              <img src="https://picsum.photos/200" alt="" />
+              <img class="accordion-img" src="https://picsum.photos/200" alt="" />
             </div>
             <div class="description">
               <p>
@@ -91,13 +86,11 @@
       <div class="accordion">
         <div class="accordion-header">
           <h2 class="accordion-heading">Item</h2>
-          <span
-            ><object data="icons/plus-solid.svg" class="accordion-toggle"></object
-          ></span>
+          <span><span><img class="accordion-icon" src="icons/plus-solid.svg" alt=""></span>
         </div>
         <div class="accordion-body">
             <div class="img">
-              <img src="https://picsum.photos/200" alt="" />
+              <img class="accordion-img" src="https://picsum.photos/200" alt="" />
             </div>
             <div class="description">
               <p>
@@ -116,13 +109,11 @@
       <div id="accordion-5" class="accordion">
         <div id="accordion-header-5" class="accordion-header">
           <h2 class="accordion-heading">Item</h2>
-          <span
-            ><object data="icons/plus-solid.svg" class="accordion-toggle""></object
-          ></span>
+          <span><img class="accordion-icon" src="icons/plus-solid.svg" alt=""></span>
         </div>
         <div id="accordion-body-5" class="accordion-body">
             <div class="img">
-              <img src="https://picsum.photos/200" alt="" />
+              <img class="accordion-img" src="https://picsum.photos/200" alt="" />
             </div>
             <div class="description">
               <p>
